<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sistemas.intents.Main2Activity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="112dp"
        android:layout_height="38dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="45dp"
        android:text="@string/nombre2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="110dp"
        android:layout_height="41dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="36dp"
        android:text="@string/apellido2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="101dp"
        android:onClick="Regresar"
        android:text="@string/regresar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />
</android.support.constraint.ConstraintLayout>
